--- a/index.html
+++ b/index.html
@@ -1,194 +1,233 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="\imagens\favicon.png" />
+    <title>Música para todos - Spotfy</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="\imagens\favicon.png">
-  <title>Música para todos - Spotfy</title>
+    <!-- Bootstrap -->
 
-  <!-- Bootstrap -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="estilo.css" rel="stylesheet" />
 
-  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="estilo.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
+  </head>
 
-<body>
+  <body>
+    <nav class="navbar navbar-fixed-top navbar-inverse navbar-transparente">
+      <div class="container">
+        <!--header-->
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle collapsed"
+            data-toggle="collapse"
+            data-target="#barra-navegacao"
+          >
+            <span class="sr-only">Alternar navegacao</span>
 
-  <nav class="navbar navbar-fixed-top navbar-inverse navbar-transparente">
-    <div class="container">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
-      <!--header-->
-      <div class="navbar-header">
-
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#barra-navegacao">
-          <span class="sr-only">Alternar navegacao</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-
-        <a href="index.html" class="navbar-brand">
-          <span class="img-logo">Spotfy</span>
-
-        </a>
-
-      </div>
-      <!--navbar-->
-      <div class="collapse navbar-collapse" id="barra-navegacao">
-
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href=""><strong>premium </strong></a></li>
-          <li><a href=""><strong>ajuda </strong></a></li>
-          <li><a href=""><strong>baixar </strong></a></li>
-          <li class="divisor" role="separator"></li>
-          <li><a href=""><strong>Inscrever-se </strong></a></li>
-          <li><a href=""><strong>Entrar </strong></a></li>
-
-        </ul>
-      </div>
-    </div>
-    <!--/container-->
-  </nav>
-  <div class="capa">
-    <div class="texto-capa">
-      <h1>Music for all</h1>
-      <a href="" class="btn btn-custom btn-roxo btn-lg">Aproveite o spotfy free</a>
-      <a href="" class="btn btn-custom btn-branco btn-lg">Obter o spotfy premiun</a>
-    </div>
-  </div>
-
-  <!--Conteudo-->
-  <section id="servicos">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-6">
-          <div class="row albuns">
-            <div class="col-md-6">
-              <img src="/imagens/img1.jpg" class="img-responsive">
-
-
-
-            </div>
-            <div class="col-md-6">
-              <img src="/imagens/img2.jpg" class="img-responsive">
-
-            </div>
-
-          </div>
-
-          <div class="row albuns">
-            <div class="col-md-6">
-              <img src="/imagens/img3.jpg" class="img-responsive">
-
-
-
-            </div>
-            <div class="col-md-6">
-              <img src="/imagens/img4.jpg" class="img-responsive">
-
-            </div>
-
-          </div>
+          <a href="index.html" class="navbar-brand">
+            <span class="img-logo">Spotfy</span>
+          </a>
         </div>
+        <!--navbar-->
+        <div class="collapse navbar-collapse" id="barra-navegacao">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href=""><strong>premium </strong></a>
+            </li>
+            <li>
+              <a href=""><strong>ajuda </strong></a>
+            </li>
+            <li>
+              <a href=""><strong>baixar </strong></a>
+            </li>
 
+            <li class="divisor" role="separator"></li>
 
-        <div class="col-md-6">
-
-          <h2>Oque o Spot Tem ?</h2>
-          <h3>Musicas</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Aliquid, earum eligendi consequatur dolorum eum hic ad dolor dolores soluta
-            voluptate assumenda,atque distinctio incidunt impedit blanditiis architecto
-            voluptatum neque natus.</p>
-          <h3>Playlist</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Aliquid, earum eligendi consequatur dolorum eum hic ad dolor dolores soluta
-            voluptate assumenda,atque distinctio incidunt impedit blanditiis architecto
-            voluptatum neque natus.</p>
-          <h3>Novos Lancamentos</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ipsum provident, aperiam dolorem hic ex
-            itaque enim velit iste nulla dolor amet cum laborum quod ut neque minus sed quaerat.</p>
+            <li>
+              <a href=""><strong>Inscrever-se </strong></a>
+            </li>
+            <li>
+              <a href=""><strong>Entrar </strong></a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <!--/container-->
+    </nav>
 
+    <div class="capa">
+      <div class="texto-capa">
+        <h1>Music for all</h1>
+        <a href="" class="btn btn-custom btn-roxo btn-lg"
+          >Aproveite o spotfy free</a
+        >
+        <a href="" class="btn btn-custom btn-branco btn-lg"
+          >Obter o spotfy premiun</a
+        >
       </div>
     </div>
-  </section>
 
-
-  <!--segunda parte-->
-  <section id="servicos">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-6">
-          <div class="row albuns">
-            <div class="col-md-6">
-              <img src="/imagens/img1.jpg" class="img-responsive">
-
-
-
-            </div>
-            <div class="col-md-6">
-              <img src="/imagens/img2.jpg" class="img-responsive">
-
+    <!--Conteudo primeira parte-->
+    <section id="servicos">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="/imagens/img1.jpg" class="img-responsive" />
+              </div>
+              <div class="col-md-6">
+                <img src="/imagens/img2.jpg" class="img-responsive" />
+              </div>
             </div>
 
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="/imagens/img3.jpg" class="img-responsive" />
+              </div>
+              <div class="col-md-6">
+                <img src="/imagens/img4.jpg" class="img-responsive" />
+              </div>
+            </div>
           </div>
 
-          <div class="row albuns">
-            <div class="col-md-6">
-              <img src="/imagens/img3.jpg" class="img-responsive">
+          <div class="col-md-6">
+            <h2>Oque o Spot Tem ?</h2>
+            <h3>Musicas</h3>
 
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+              earum eligendi consequatur dolorum eum hic ad dolor dolores soluta
+              voluptate assumenda,atque distinctio incidunt impedit blanditiis
+              architecto voluptatum neque natus.
+            </p>
+            <h3>Playlist</h3>
 
-
-            </div>
-            <div class="col-md-6">
-              <img src="/imagens/img4.jpg" class="img-responsive">
-
-            </div>
-
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+              earum eligendi consequatur dolorum eum hic ad dolor dolores soluta
+              voluptate assumenda,atque distinctio incidunt impedit blanditiis
+              architecto voluptatum neque natus.
+            </p>
+            <h3>Novos Lancamentos</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio ipsum provident, itaque enim velit iste nulla dolor
+              amet cum laborum quod ut neque minus sed quaerat.
+            </p>
           </div>
         </div>
-
-
-        <div class="col-md-6">
-
-          <h2>Oque o Spot Tem ?</h2>
-          <h3>Musicas</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Aliquid, earum eligendi consequatur dolorum eum hic ad dolor dolores soluta
-            voluptate assumenda,atque distinctio incidunt impedit blanditiis architecto
-            voluptatum neque natus.</p>
-          <h3>Playlist</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Aliquid, earum eligendi consequatur dolorum eum hic ad dolor dolores soluta
-            voluptate assumenda,atque distinctio incidunt impedit blanditiis architecto
-            voluptatum neque natus.</p>
-          <h3>Novos Lancamentos</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ipsum provident, aperiam dolorem hic ex
-            itaque enim velit iste nulla dolor amet cum laborum quod ut neque minus sed quaerat.</p>
-        </div>
-
       </div>
-    </div>
-  </section>
-  <!--rodape-->
+    </section>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!--segunda parte-->
+    <section id="recursos">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Facil?</h2>
+            <h3>Buscar</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="bootstrap/js/bootstrap.min.js"></script>
-</body>
+            <h3>Navegar</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
+            <h3>Descobrir</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio ipsum provident, aperiam dolorem hi
+            </p>
+          </div>
+
+          <div class="col-md-8">
+            <div class="row rotacao">
+              <div class="col-md-6">
+                <img src="/imagens/iphone1.png" class="img-responsive" />
+              </div>
+
+              <div class="col-md-6">
+                <img src="/imagens/iphone2.png" class="img-responsive" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--rodape-->
+
+    <footer id="rodape">
+      <div class="rodape">
+        <div class="row">
+          <div class="col-md-2">
+            <span class="img-logo">spotify</span>
+          </div>
+
+          <div class="col-md-2">
+            <h4>Company</h4>
+            <ul class="nav">
+              <li><a href="">sobre</a></li>
+
+              <li><a href="">Imprensa</a></li>
+              <li><a href="">Novidades</a></li>
+            </ul>
+          </div>
+
+          <div class="col-md-2">
+            <h4>Comunidade</h4>
+            <ul class="nav">
+              <li><a href="">Artistas</a></li>
+
+              <li><a href="">Desenvolvedores</a></li>
+              <li><a href="">Marcas</a></li>
+            </ul>
+          </div>
+
+          <div class="col-md-2">
+            <h4>links Uteis</h4>
+            <ul class="nav">
+              <li><a href="">Ajuda</a></li>
+
+              <li><a href="">Presentes</a></li>
+              <li><a href="">Player da Web</a></li>
+            </ul>
+          </div>
+
+          <div class="col-md-4">
+            <ul class="nav">
+              <li class="redesocial">
+                <a href=""><img src="imagens/instagram.png"/></a>
+              </li>
+              <li class="redesocial">
+                <a href=""><img src="imagens/twitter.png"/></a>
+              </li>
+              <li class="redesocial">
+                <a href=""><img src="imagens/facebook.png"/></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+  </body>
 </html>
